update to webpage

--- a/index.html
+++ b/index.html
@@ -45,13 +45,39 @@
           </div>
           <div>
             <img src="image/image2.jpg">
-            <div class="texttwo"></div>
+            <div class="texttwo">Treatment For Jaw Pain</div>
           </div>
           <div>
-            <img src="image/image3.jpg"
+            <img src="image/image3.jpg">
+            <div class="texttwo">Free At Home Whitening</div>
+          </div>
+          <div>
+            <img src="image/image4.jpg">
+            <div class="texttwo">Custom Fit Sports Guards</div>
           </div>
         </div>
       </div>
+  
+      <!--phase 3-->
+      <div class="quote">
+        <p>"Something cool, not sure what. maybe some awesome quote or something, or maybe more info?</p>
+        <b>
+          --Maybe Dr. Lane
+        </b>
+      </div>
 
+      <!--phase 4-->
+      <div class="sign-up">
+        <div class="sign-item signs-text">
+          <h3>Don't Hesitate to take care of your orthodointic needs!</h3>
+          <p>Make an appointment by clicking the button right over there!</p>
+        </div>
+        <div class="sign-item signs-button">
+          <button type="button">Make an Appointment</button>
+        </div>
+      </div>
+      <div class="footer">
+        <p>Copyright © No one really 2022</p>
+      </div>
     </div>
   </body>
